fix(carousel__card:hover) : changign border-color instead of adding border so HTML do not jump on hover

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,7 +110,7 @@ li {
 
 .carousel__card {
     margin: 0.4vw;
-    /*border: 2px solid lightseagreen;*/
+    border: 2px solid #141414;
     flex: 0 0 13%;
     /*height calculated to fit img dimension*/
     height: calc(13vw * 1.47);
@@ -122,7 +122,7 @@ li {
 }
 
 .carousel__card:hover {
-    border: 2px solid black;
+    border-color: lightgray;
 }
 
 /* The Modal (background) */
